--- a/fashion.ipynb
+++ b/fashion.ipynb
@@ -2,34 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From c:\\python311\\Lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import keras\n",
-    "keras.datasets.fashion_mnist.load_data()\n",
-    "from tensorflow.keras import layers, models\n",
-    "from tensorflow.keras.datasets import mnist\n",
-    "from tensorflow.keras.utils import to_categorical\n",
-    "import plotly as plt\n",
     "import matplotlib.pyplot as plt\n",
-    "import tensorflow as tf\n",
-    "from tensorflow.keras.models import Sequential\n",
-    "from tensorflow.keras.layers import Dense, Flatten, Conv2D, MaxPooling2D\n",
-    "import mlflow\n",
-    "import mlflow.sklearn\n",
-    "\n",
-    "mlflow.set_tracking_uri(\"http://127.0.0.1:5000/\") \n",
-    "\n"
+    "from keras.models import Sequential\n",
+    "from keras.layers import Conv2D, MaxPooling2D, Flatten, Dense"
    ]
   },
   {
@@ -38,16 +18,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "(x_train, y_train), (x_test, y_test) = keras.datasets.fashion_mnist.load_data()\n",
-    "assert x_train.shape == (60000, 28, 28)\n",
-    "assert x_test.shape == (10000, 28, 28)\n",
-    "assert y_train.shape == (60000,)\n",
-    "assert y_test.shape == (10000,)\n"
+    "#Charler les datas vetements \n",
+    "(x_train, y_train), (x_test, y_test) = keras.datasets.fashion_mnist.load_data() "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert x_train.shape == (60000, 28, 28)\n",
+    "assert x_test.shape == (10000, 28, 28)\n",
+    "assert y_train.shape == (60000,)\n",
+    "assert y_test.shape == (10000,)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -59,38 +48,87 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Label correspondant à l'image : 3\n"
+     ]
     }
    ],
    "source": [
-    "# Essais\n",
+    "# test \n",
     "plt.plot()\n",
     "plt.imshow(x_train[3], cmap=\"gray\")\n",
-    "plt.show()"
+    "plt.show()\n",
+    "print(\"Label correspondant à l'image :\", y_train[3])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Taille du noyau utilisée dans le modèle\n",
+    "kernel_size = (3, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From c:\\python311\\Lib\\site-packages\\keras\\src\\backend.py:873: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
+      "\n",
+      "WARNING:tensorflow:From c:\\python311\\Lib\\site-packages\\keras\\src\\layers\\pooling\\max_pooling2d.py:161: The name tf.nn.max_pool is deprecated. Please use tf.nn.max_pool2d instead.\n",
+      "\n"
+     ]
     }
    ],
    "source": [
-    "y_train[3]"
+    "# Construction du modele predictif \n",
+    "model = Sequential([\n",
+    "    Conv2D(32, kernel_size=kernel_size, activation='relu', input_shape=(28, 28, 1)),\n",
+    "    MaxPooling2D(pool_size=(2, 2)),\n",
+    "    Flatten(),\n",
+    "    Dense(256, activation='relu'),\n",
+    "    Dense(256, activation='relu'),\n",
+    "    Dense(256, activation='relu'),\n",
+    "    Dense(256, activation='relu'),\n",
+    "    Dense(10, activation='softmax')\n",
+    "])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From c:\\python311\\Lib\\site-packages\\keras\\src\\optimizers\\__init__.py:309: The name tf.train.Optimizer is deprecated. Please use tf.compat.v1.train.Optimizer instead.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# compilation du modele \n",
+    "model.compile(optimizer='adam',\n",
+    "              loss='sparse_categorical_crossentropy',\n",
+    "              metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -98,127 +136,55 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "938/938 [==============================] - 14s 14ms/step - loss: 0.7762 - accuracy: 0.8382\n",
+      "WARNING:tensorflow:From c:\\python311\\Lib\\site-packages\\keras\\src\\utils\\tf_utils.py:492: The name tf.ragged.RaggedTensorValue is deprecated. Please use tf.compat.v1.ragged.RaggedTensorValue instead.\n",
+      "\n",
+      "WARNING:tensorflow:From c:\\python311\\Lib\\site-packages\\keras\\src\\engine\\base_layer_utils.py:384: The name tf.executing_eagerly_outside_functions is deprecated. Please use tf.compat.v1.executing_eagerly_outside_functions instead.\n",
+      "\n",
+      "938/938 [==============================] - 15s 15ms/step - loss: 0.8478 - accuracy: 0.8340\n",
       "Epoch 2/10\n",
-      "938/938 [==============================] - 13s 14ms/step - loss: 0.2784 - accuracy: 0.8977\n",
+      "938/938 [==============================] - 19s 20ms/step - loss: 0.2896 - accuracy: 0.8949\n",
       "Epoch 3/10\n",
-      "938/938 [==============================] - 13s 14ms/step - loss: 0.2332 - accuracy: 0.9140\n",
+      "938/938 [==============================] - 17s 19ms/step - loss: 0.2477 - accuracy: 0.9078\n",
       "Epoch 4/10\n",
-      "938/938 [==============================] - 13s 14ms/step - loss: 0.2081 - accuracy: 0.9232\n",
+      "938/938 [==============================] - 18s 20ms/step - loss: 0.2198 - accuracy: 0.9194\n",
       "Epoch 5/10\n",
-      "938/938 [==============================] - 13s 14ms/step - loss: 0.1913 - accuracy: 0.9291\n",
+      "938/938 [==============================] - 21s 23ms/step - loss: 0.2004 - accuracy: 0.9259\n",
       "Epoch 6/10\n",
-      "938/938 [==============================] - 13s 14ms/step - loss: 0.1749 - accuracy: 0.9358\n",
+      "938/938 [==============================] - 23s 25ms/step - loss: 0.1851 - accuracy: 0.9320\n",
       "Epoch 7/10\n",
-      "938/938 [==============================] - 13s 14ms/step - loss: 0.1614 - accuracy: 0.9410\n",
+      "938/938 [==============================] - 19s 21ms/step - loss: 0.1723 - accuracy: 0.9373\n",
       "Epoch 8/10\n",
-      "938/938 [==============================] - 13s 14ms/step - loss: 0.1409 - accuracy: 0.9477\n",
+      "938/938 [==============================] - 21s 22ms/step - loss: 0.1577 - accuracy: 0.9417\n",
       "Epoch 9/10\n",
-      "938/938 [==============================] - 13s 14ms/step - loss: 0.1359 - accuracy: 0.9511\n",
+      "938/938 [==============================] - 23s 25ms/step - loss: 0.1421 - accuracy: 0.9470\n",
       "Epoch 10/10\n",
-      "938/938 [==============================] - 13s 14ms/step - loss: 0.1246 - accuracy: 0.9558\n",
-      "313/313 [==============================] - 2s 5ms/step - loss: 0.3940 - accuracy: 0.9043\n",
-      "Test accuracy: 0.9042999744415283\n"
+      "938/938 [==============================] - 28s 29ms/step - loss: 0.1269 - accuracy: 0.9542\n"
      ]
     }
    ],
    "source": [
-    "import mlflow\n",
-    "from mlflow import log_metric, log_param, log_artifact\n",
-    "from keras.models import Sequential\n",
-    "from keras.layers import Conv2D, MaxPooling2D, Flatten, Dense\n",
-    "from keras.applications import VGG16\n",
-    "\n",
-    "# Taille du noyau utilisée dans le modèle\n",
-    "kernel_size = (3,  3)\n",
-    "\n",
-    "# Construire le nom de l'exécution en incluant le kernel_size\n",
-    "run_name = f\"Kernel Size: {kernel_size}\"\n",
-    "\n",
-    "# Démarrer une nouvelle exécution MLflow avec le nom personnalisé\n",
-    "with mlflow.start_run(run_name=run_name):\n",
-    "    # Définir le modèle\n",
-    "    model = Sequential([\n",
-    "        Conv2D(32, kernel_size=kernel_size, activation='relu', input_shape=(28,   28,   1)),\n",
-    "        MaxPooling2D(pool_size=(2,   2)),\n",
-    "        Flatten(),\n",
-    "        Dense(256, activation='relu'),\n",
-    "        Dense(256, activation='relu'),\n",
-    "        Dense(256, activation='relu'),\n",
-    "        Dense(256, activation='relu'),\n",
-    "        Dense(10, activation='softmax')\n",
-    "    ])\n",
-    "    \n",
-    "    # Compiler le modèle\n",
-    "    model.compile(optimizer='adam',\n",
-    "                  loss='sparse_categorical_crossentropy',\n",
-    "                  metrics=['accuracy'])\n",
-    "    \n",
-    "    # Entraîner le modèle\n",
-    "    history = model.fit(x_train, y_train, epochs=10, batch_size=64)\n",
-    "    \n",
-    "    # Enregistrer les métriques d'entraînement\n",
-    "    for epoch in range(len(history.history['accuracy'])):\n",
-    "        log_metric(\"training_accuracy\", history.history['accuracy'][epoch])\n",
-    "        log_metric(\"training_loss\", history.history['loss'][epoch])\n",
-    "    \n",
-    "    # Évaluer le modèle sur le jeu de test\n",
-    "    test_loss, test_acc = model.evaluate(x_test, y_test)\n",
-    "    \n",
-    "    # Enregistrer les métriques de test\n",
-    "    log_metric(\"test_accuracy\", test_acc)\n",
-    "    log_metric(\"test_loss\", test_loss)\n",
-    "    \n",
-    "    # Enregistrer le modèle\n",
-    "    model.save(\"model.h5\")\n",
-    "    log_artifact(\"model.h5\")\n",
-    "    \n",
-    "    # Enregistrer les paramètres du modèle\n",
-    "    log_param(\"optimizer\", \"adam\")\n",
-    "    log_param(\"loss\", \"sparse_categorical_crossentropy\")\n",
-    "    log_param(\"epochs\",   10)\n",
-    "    log_param(\"batch_size\",   64)\n",
-    "    log_param(\"kernel_size\", kernel_size)  # Enregistrer le kernel_size comme paramètre\n",
-    "\n",
-    "print('Test accuracy:', test_acc)\n",
-    "\n"
+    "# entrainement du modele \n",
+    "history = model.fit(x_train, y_train, epochs=5, batch_size=64)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "Input to `.fit()` should have rank 4. Got array with shape: (60000, 28, 28)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[6], line 9\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mkeras\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpreprocessing\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mimage\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ImageDataGenerator\n\u001b[0;32m      3\u001b[0m datagen \u001b[38;5;241m=\u001b[39m ImageDataGenerator(\n\u001b[0;32m      4\u001b[0m     rotation_range\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m20\u001b[39m,\n\u001b[0;32m      5\u001b[0m     width_shift_range\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.2\u001b[39m,\n\u001b[0;32m      6\u001b[0m     height_shift_range\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.2\u001b[39m,\n\u001b[0;32m      7\u001b[0m     horizontal_flip\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m----> 9\u001b[0m \u001b[43mdatagen\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx_train\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mc:\\python311\\Lib\\site-packages\\keras\\src\\preprocessing\\image.py:2088\u001b[0m, in \u001b[0;36mImageDataGenerator.fit\u001b[1;34m(self, x, augment, rounds, seed)\u001b[0m\n\u001b[0;32m   2086\u001b[0m x \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39masarray(x, dtype\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdtype)\n\u001b[0;32m   2087\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m x\u001b[38;5;241m.\u001b[39mndim \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m4\u001b[39m:\n\u001b[1;32m-> 2088\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m   2089\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInput to `.fit()` should have rank 4. Got array with shape: \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m   2090\u001b[0m         \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mstr\u001b[39m(x\u001b[38;5;241m.\u001b[39mshape)\n\u001b[0;32m   2091\u001b[0m     )\n\u001b[0;32m   2092\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m x\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mchannel_axis] \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m {\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m3\u001b[39m, \u001b[38;5;241m4\u001b[39m}:\n\u001b[0;32m   2093\u001b[0m     warnings\u001b[38;5;241m.\u001b[39mwarn(\n\u001b[0;32m   2094\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mExpected input to be images (as Numpy array) \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m   2095\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfollowing the data format convention \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   2105\u001b[0m         \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m channels).\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m   2106\u001b[0m     )\n",
-      "\u001b[1;31mValueError\u001b[0m: Input to `.fit()` should have rank 4. Got array with shape: (60000, 28, 28)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "313/313 [==============================] - 2s 5ms/step - loss: 0.3676 - accuracy: 0.8961\n",
+      "Test accuracy: 0.8960999846458435\n"
      ]
     }
    ],
    "source": [
-    "from keras.preprocessing.image import ImageDataGenerator\n",
-    "\n",
-    "datagen = ImageDataGenerator(\n",
-    "    rotation_range=20,\n",
-    "    width_shift_range=0.2,\n",
-    "    height_shift_range=0.2,\n",
-    "    horizontal_flip=True)\n",
-    "\n",
-    "datagen.fit(x_train)\n"
+    "#   J'évalue le modele \n",
+    "test_loss, test_acc = model.evaluate(x_test, y_test)\n",
+    "print('Test accuracy:', test_acc)"
    ]
   }
  ],
